@@ -1,3 +1,10 @@
+2003-08-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
+	* boot-grub.pl.in (gst_boot_grub_linux2grub)
+	(gst_boot_grub_grub2linux): added some rude guessing if
+	the device doesn't exist in devices.map, anyways, this may still
+	fail under certain circumstances, but this is unavoidable :-(
+
 2003-08-25  Carlos Garnacho Parro  <garnacho@tuxerver.net>
  
         * Release 0.27.0
